# GC-Wii-Linux-SDL-1.2

./: .gitignore  README.md  configure.in  sdl-config.in
include/: SDL_config.h.in  SDL_events.h  SDL_opengl.h
release-1.2.12-gc/: README.gc-linux
release-1.2.12-gc/src/video/: SDL_sysvideo.h  SDL_video.c
release-1.2.12-gc/src/video/gc/: SDL_gcevents.c  SDL_gcgl.c  SDL_gcvideo.h  SDL_gcyuv_c.h
release-1.2.14-gc-wii/: .gitignore  sdl-config.in
release-1.2.14-gc-wii/include/: SDL_config.h.in
release-1.2.14-gc-wii/src/video/: SDL_yuv_sw.c
release-1.2.14-gc-wii/src/video/fbcon/: SDL_fbgc.c  SDL_fbvideo.h
release-1.2.14-gc-wii/src/video/x11/: SDL_x11events.c
release-1.2.15-gc-wii/: Makefile.in  configure.in  sdl.pc.in
release-1.2.15-gc-wii/build-scripts/: makedep.sh
release-1.2.15-gc-wii/src/video/fbcon/: SDL_fbgc.c
release-1.2.15-gc-wii/src/video/x11/: SDL_x11events.c
release-1.2.8-gc/: .gitignore  README.gc-linux  configure.in
release-1.2.8-gc/src/video/: SDL_sysvideo.h
release-1.2.8-gc/src/video/gc/: SDL_gcevents.c  SDL_gcgl.h  SDL_gcyuv.c
release-1.2.8-gc/src/video/photon/: SDL_ph_modes_c.h
src/audio/: SDL_audio.c
src/audio/paudio/: SDL_paudio.c
src/audio/pulse/: SDL_pulseaudio.c
src/joystick/bsd/: SDL_sysjoystick.c
src/joystick/linux/: SDL_sysjoystick.c
src/video/: SDL_video.c  SDL_yuv_sw.c
src/video/fbcon/: SDL_fbgc.c  SDL_fbgc.h  SDL_fbvideo.c  SDL_fbvideo.h
src/video/gc/: Makefile.am  SDL_gcevents_c.h  SDL_gcvideo.c  SDL_gcvideo.h  SDL_gcyuv.c  SDL_gcyuv_c.h
src/video/x11/: SDL_x11events.c  SDL_x11sym.h
