
## Makefile.am for SDL using the GameCube Linux framebuffer video driver

noinst_LTLIBRARIES = libvideo_gc.la
libvideo_gc_la_SOURCES = $(GC_SRCS)

# The SDL GameCube Linux framebuffer video driver sources
GC_SRCS = 			\
	SDL_gcevents.c		\
	SDL_gcevents_c.h	\
	SDL_gcyuv.c		\
	SDL_gcyuv_c.h		\
	SDL_gcgl.c		\
	SDL_gcgl.h		\
	SDL_gcvideo.c		\
	SDL_gcvideo.h

